[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Victor Vialard <vvialard@hotmail.fr>"]
edition = "2021"

[lib]
bench = false

[dependencies]
rust-crypto = "0.2.36"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
indoc = "2"
itertools = "0.12.1"
nalgebra = "0.32.3"
rand = "0.8.5"
regex = "1.10.3"
lazy_static = "1.4.0"
